--- a/3/index.html
+++ b/3/index.html
@@ -21,5 +21,21 @@
             <div class="left box"><h2>img</h2></div>
         </div>
     </div>
+    <script>
+        let vehicle = {
+            wheelsisAmount: 4
+        };
+
+        let bicycle = {
+            wheelsisAmount: 2
+        };
+
+        Object.setPrototypeOf(bicycle, vehicle);
+        console.log(bicycle.wheelsisAmount);
+        delete bicycle.wheelsisAmount;
+        console.log(bicycle.wheelsisAmount);
+        delete vehicle.wheelsisAmount;
+        console.log(vehicle.wheelsisAmount);
+    </script>
 </body>
 </html>
